--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿ansi2html==1.8.0
+ansi2html==1.8.0
 asttokens==2.2.1
 backcall==0.2.0
 certifi==2023.7.22
@@ -17,9 +17,15 @@ executing==1.2.0
 Flask==2.2.5
 gunicorn==21.2.0
 idna==3.4
+ipykernel==6.25.0
+ipython==8.14.0
+ipywidgets==8.1.0
 itsdangerous==2.1.2
 jedi==0.19.0
 Jinja2==3.1.2
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+jupyterlab-widgets==3.0.8
 korean-lunar-calendar==0.3.1
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
@@ -40,6 +46,7 @@ pyluach==2.2.0
 python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3
+pywin32==306
 pyzmq==25.1.0
 requests==2.31.0
 retrying==1.3.4
